[gd_scene load_steps=4 format=3 uid="uid://73vsmr7y8pbp"]

[ext_resource type="Script" uid="uid://4bsyfj0gngpc" path="res://code/levels/rooms/room.gd" id="1_ntb0g"]
[ext_resource type="TileSet" uid="uid://bpkpb6ourtk4s" path="res://data/everything.tres" id="2_gu6v4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gu6v4"]
size = Vector2(20, 8)

[node name="Room" type="Node2D"]
script = ExtResource("1_ntb0g")

[node name="outline" type="TileMapLayer" parent="."]
unique_name_in_owner = true
position = Vector2(1, 0)
tile_set = ExtResource("2_gu6v4")

[node name="spawn_point" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(264, 144)

[node name="transfer_area" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 0

[node name="transfer_collider" type="CollisionShape2D" parent="transfer_area"]
unique_name_in_owner = true
position = Vector2(260, 7)
shape = SubResource("RectangleShape2D_gu6v4")
disabled = true
